If the parent_type is set to ARMATURE (instead of using the modifier). The deformations are not shown in the viewport anymore. #69326

Closed
opened 2019-08-30 13:37:57 +02:00 by Michael Nischt · 11 comments

System Information
Operating system: Ubuntu 19.10 (also Windows 10)
Graphics card: NVIDIA GeForce GTX 765M

Blender Version
Broken: 2.80
Worked: 2.79a

Short description of error
If the parent_type is set to ARMATURE (instead of using the modifier). The deformations are not shown in the viewport anymore. In rendered frames the deformation according to the pose still works.
(Changing to an Armature modifier works. However, we use a custom exporter which relies on models using the parent_type instead of the modifier.)

Exact steps for others to reproduce the error

  1. Take any rigged model (simple auto weighted is fine).
  2. Remove the Armature modifier and set the mesh object's parent_type to armature instead.
  3. Notice that in pose mode the mesh doesn't get deformed in the viewport anymore. (it does rendering a frame.)
**System Information** Operating system: Ubuntu 19.10 (also Windows 10) Graphics card: NVIDIA GeForce GTX 765M **Blender Version** Broken: 2.80 Worked: 2.79a **Short description of error** If the `parent_type` is set to `ARMATURE` (instead of using the modifier). The deformations are not shown in the viewport anymore. In rendered frames the deformation according to the pose still works. (Changing to an Armature modifier works. However, we use a custom exporter which relies on models using the parent_type instead of the modifier.) **Exact steps for others to reproduce the error** 1. Take any rigged model (simple auto weighted is fine). 2. Remove the Armature modifier and set the mesh object's `parent_type` to `armature` instead. 3. Notice that in pose mode the mesh doesn't get deformed in the viewport anymore. (it does rendering a frame.)
Author

Added subscriber: @michael_nischt

Added subscriber: @michael_nischt

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2019-08-30 15:43:18 +02:00

We do not handle user support on this tracker, only bug reports. User forums like blenderartists.org or blender.stackexchange.com and our devtalk should be used for that matter.

Parenting to armature with ARMATURE type is used to parent objects to bones, not to perform skined deformation. You need the modifier for that.

We do not handle user support on this tracker, only bug reports. User forums like [blenderartists.org](http:*blenderartists.org/) or [blender.stackexchange.com](http:*blender.stackexchange.com/) and our [devtalk](https://devtalk.blender.org) should be used for that matter. Parenting to armature with `ARMATURE` type is used to parent objects to bones, not to perform skined deformation. You need the modifier for that.
Author

Hi Bastien,

I'm sorry but I think you are wrong. It is a bug report.

I think you are confusing it with the parent_type set to BONE where you also specify the armature in addition to a bone. That one still works just fine in the viewport.

At least in 2.79 you don't need a Armature modifier and according to the UI it's still the same in 2.8.
Further ARMATURE still part of the 2.8 API ( https://docs.blender.org/api/current/bpy.types.Object.html#bpy.types.Object.parent_type ).

I know most people use the modifier instead of the parent_type. However, the parent_type is much easier to export and since it still works in all places except the viewport I also wouldn't expect the functionality to be planned for removal and other parts like rendering had been missed.

Best,
Michael

Hi Bastien, I'm sorry but I think you are wrong. It is a bug report. I think you are confusing it with the `parent_type` set to `BONE` where you also specify the armature in addition to a bone. That one still works just fine in the viewport. At least in 2.79 you don't need a Armature modifier and according to the UI it's still the same in 2.8. Further `ARMATURE` still part of the 2.8 API ( https://docs.blender.org/api/current/bpy.types.Object.html#bpy.types.Object.parent_type ). I know most people use the modifier instead of the parent_type. However, the parent_type is much easier to export and since it still works in all places except the viewport I also wouldn't expect the functionality to be planned for removal and other parts like rendering had been missed. Best, Michael
Author

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Bastien Montagne removed their assignment 2019-08-30 17:01:28 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

bug_update_virtual_armature_modifier.blend

OK, my bad. Think that is an update/DEG issue, since this implicitly generates a 'virtual' armature modifier, am pretty sure the necessary links are not made in DEG then, hence update is not done when editing the pose. You can see that by posing the bone, then selecting the cube and switching in/out of Edit mode, then the cube takes the current bone's pose.

I will try to check on that, but maybe @Sergey also have some clues here?

[bug_update_virtual_armature_modifier.blend](https://archive.blender.org/developer/F7710924/bug_update_virtual_armature_modifier.blend) OK, my bad. Think that is an update/DEG issue, since this implicitly generates a 'virtual' armature modifier, am pretty sure the necessary links are not made in DEG then, hence update is not done when editing the pose. You can see that by posing the bone, then selecting the cube and switching in/out of Edit mode, then the cube takes the current bone's pose. I will try to check on that, but maybe @Sergey also have some clues here?
Author

Probably already clear to you guys since your looking for the missing dependency trigger but just in case: it seems obj.data.update() forces an update of the viewport.

Probably already clear to you guys since your looking for the missing dependency trigger but just in case: it seems [obj.data.update() ](https://blender.stackexchange.com/questions/150303/blener-2-8-using-parent-type-armature-instead-of-the-modifier-seems-to?noredirect=1#comment256966_150303) forces an update of the viewport.

This issue was referenced by 8a7a7af627

This issue was referenced by 8a7a7af627b89e67b12f9bc4ae9e175c397961ba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-09-03 10:49:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69326
No description provided.