Fix T69326: Parent type ARMATURE doesn't work